@@ -5,6 +5,7 @@
  * http://geos.refractions.net
  *
  * Copyright (C) 2001-2002 Vivid Solutions Inc.
+ * Copyright (C) 2005 Refractions Research Inc.
  *
  * This is free software; you can redistribute and/or modify it under
  * the terms of the GNU Lesser General Public Licence as published
@@ -234,6 +235,13 @@ Point* Geometry::getCentroid() const {
 		cent.add(in);
 		centPt=cent.getCentroid();
 	}
+
+	if ( ! centPt )
+	{
+		if ( in != this ) delete(in);
+		return NULL;
+	}
+
 	Point *pt=createPointFromInternalCoord(centPt,this);
 	delete centPt;
 	if ( in != this ) delete(in);
@@ -853,6 +861,9 @@ Point* Geometry::createPointFromInternalCoord(const Coordinate* coord,const Geom
 
 /**********************************************************************
  * $Log$
+ * Revision 1.72.2.1  2005/05/24 07:26:40  strk
+ * back-ported segfault fix in EMPTYGEOM::getCentroid()
+ *
  * Revision 1.72  2004/11/17 08:13:16  strk
  * Indentation changes.
  * Some Z_COMPUTATION activated by default.
