@@ -14,3 +14,7 @@ Changes from 2.1.1 to 2.1.2
 - Added support for polygonize and parametrized buffer tests in XMLTester
 - Fixed support for --includedir and --libdir 
 - Fixed Z interpolation in LineIntersector
+- Handled NULL results from getCentroid() in XMLTester
+- Segfault fix in (EMPTY)Geometry::getCentroid()
+
+@@@ from Changelog 2004-12-30 @@@
